Reducing padding btween  link/embed buttons to prevent overflow on mobile

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ h3.pubmodal_title {
 }
 
 .puburl_link {
-	margin-right: 2.74px;	
+	margin-right: 2px;	
 }
 .puburl_link, .pubembed_link {
 	margin-bottom: 10px;	
